yaml-examples/monitorr/monitorr-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: monitorr
  labels:
    app: monitorr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitorr
  template:
    metadata:
      labels:
        app: monitorr
    spec:
      containers:
      - name: monitorr
        image: monitorr/monitorr
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        volumeMounts:
          - name: data
            mountPath: /app
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: monitorr
